# xfer

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  dashboard.yaml.example  pyproject.toml  rclone.conf.example
.claude/skills/xfer-manifest-analyze/: SKILL.md
.claude/skills/xfer-manifest-build/: SKILL.md
.claude/skills/xfer-manifest-combine/: SKILL.md
.claude/skills/xfer-manifest-rebase/: SKILL.md
.claude/skills/xfer-manifest-shard/: SKILL.md
.claude/skills/xfer-oneshot/: SKILL.md
.claude/skills/xfer-rclone-config/: SKILL.md
.claude/skills/xfer-slurm-render/: SKILL.md
.claude/skills/xfer-slurm-submit/: SKILL.md
.github/workflows/: lint.yml
docs/: dashboard.md  slack-app-setup.md
examples/: allowed_backends.yaml  mcp.config.example.yaml
src/xfer/: cli.py  est.py
src/xfer/dashboard/: __init__.py  auth.py  config.py  main.py
src/xfer/dashboard/api/: jobs.py  logs.py  remotes.py  routes.py
src/xfer/dashboard/db/: models.py  session.py
src/xfer/dashboard/services/: job_service.py  rclone_service.py  slurm_service.py  state_service.py
src/xfer/dashboard/templates/: base.html  dashboard.html  login.html
src/xfer/dashboard/templates/jobs/: create.html  detail.html  list.html
src/xfer/dashboard/templates/partials/: job_table.html  progress_bar.html
src/xfer/mcp/: config.py  server.py
src/xfer/slackbot/: __init__.py  app.py  claude_agent.py  config.py  slurm_tools.py
tests/: test_est_shard_count.py  test_slackbot_dryrun.py
