[project]
name = "xfer"
version = "0.1.0"
description = "Slurm+pyxis/enroot orchestrator for containerized rclone S3 transfers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "fastapi-sso>=0.14.0",
    "itsdangerous>=2.1.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
    "starlette>=0.35.0",
]

[project.scripts]
xfer = "xfer.cli:main"
xfer-dashboard = "xfer.dashboard.main:run"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xfer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pre-commit>=4.5.1",
]

